--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -3,11 +3,29 @@
 {% block body %}
 
 <article>
-    <h2>{{article.title}}</h2>
-    <div class="metadata">Écrit le {{article.createAt| date('d/m/Y')}} à {{article.createAt| date('H:i')}} dans la catégorie Politique</div>
+    <h2>{{ article.title }}</h2>
+    <div class="metadata">Écrit le {{ article.createAt | date('d/m/Y') }} à {{ article.createAt | date('H:i') }} dans la catégorie {{ article.category.title }}</div>
     <img src="{{article.image}}" alt="">
     {{article.content|raw}}         
     </div>
 </article>
+
+<hr>
+<h2>Commentaire(s)</h2>
+<section id="commentaires">
+    {% for comment in article.comments %}
+    <hr>
+    <div class="comment">
+        <div class="row">
+            <div class="col-3">
+                {{comment.author}} (<small>{{comment.createdAt | date('d/m/Y à H:i')}}</small>)
+            </div>
+            <div class="col">
+                {{comment.content | raw}}
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</section>
 
 {% endblock %}
