--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('blog_create')}}">Créer un article</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('security_registration')}}">S'inscrire</a>
+                    </li>
+
+                    {% if not app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('security_login')}}">Se connecter</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('security_logout')}}">Se deconnecter</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
 
