Ne plus afficher s'inscrire si connecter

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,10 +23,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('blog_create')}}">Créer un article</a>
                     </li>
+                    {% if not app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('security_registration')}}">S'inscrire</a>
                     </li>
-
+                    {% endif %}
                     {% if not app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('security_login')}}">Se connecter</a>
